--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,20 @@
-fastapi
-uvicorn
-jinja2
-python-multipart
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+click==8.3.1
+fastapi==0.129.0
+h11==0.16.0
+idna==3.11
+Jinja2==3.1.6
+MarkupSafe==3.0.3
+pydantic==2.12.5
+pydantic_core==2.41.5
+PySide6==6.10.2
+PySide6_Addons==6.10.2
+PySide6_Essentials==6.10.2
+python-multipart==0.0.22
+shiboken6==6.10.2
+starlette==0.52.1
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+uvicorn==0.40.0
